--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
